<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/fui_email_hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:padding="8dp"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/txtPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:padding="8dp"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:padding="8dp"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/txtPass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPass2"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/register_re_type_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:padding="8dp"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister_register"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register_register"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_have_an_account"
        android:textColor="#78909C"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtLogin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="24dp"
        android:text="@string/register_login_here"
        android:textColor="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>